kotlin-parser/src/test/semlang/validatorTests/fail/nameCollision8.sem

interface Baz {
  a(): Integer
}

function Baz(): Integer {
  Integer."1"
}
